[package]
name = "rnorthstar-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.26", features = ["json", "blocking", "stream"] }
futures-util = "0.3.30"
